1998-10-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c: Add width_changed signal to icon-text-item.

	* gnome-icon-list.c: (toggle_icon): Make sure we emit a signal
	with the correct index.
	(icon_event): Generate events for button-2 and 3

	* gnome-icon-list.c (gnome_icon_list_icon_is_visible): Fix wrong
	return value. 

1998-10-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (icon_event): call toggle_icon on double click
	events. 

1998-10-15  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_new): Fix merge  mistake.

1998-10-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c: I am an idiot.  I did not think anyone would
	ever override the canvas event handlers, so I was happily
	returning FALSE from all of them.
	(gnome_canvas_button): Return the appropriate value from
	emit_event().
	(gnome_canvas_motion): Likewise.
	(gnome_canvas_key): Likewise.
	(gnome_canvas_focus_in): Likewise.
	(gnome_canvas_focus_out): Likewise.
	(gnome_canvas_crossing): Return the appropriate value from
	pick_current_item().

	(emit_event): Now it returns a boolean value that indicates
	whether the event was handled by someone or not.
	(pick_current_item): Likewise.

1998-10-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (book_drop): something seems to have been screwed
	up during owen's last commit. fixed now.

1998-10-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_init): Set the GTK_CAN_FOCUS flag
	in the widget.

	* gnome-color-picker.c (gnome_color_picker_set_title): Set the
	title of the color selection dialog if it exists.

	* gnome-init.c (our_gtk_options): Fixed spelling in the option
	descriptions.

	* gnome-canvas.c (gnome_canvas_item_grab_focus): Set the
	ev.focus_change.window field to the canvas's bin window.
	(emit_event): Rearranged some of the focusing tests.

Mon Oct 19 11:57:51 1998  Owen Taylor  <otaylor@redhat.com>
