@@ -1,3 +1,11 @@
+1998-10-21  David Abilleira  <odaf@nexo.es>
+
+	* gnome-font-picker.h: removed "extern C" which is redundant with
+        BEGIN_GNOME_DCLS
+
+        * gnome-color-selector.c: Now it creates a modal dialog box only when
+        there is another modal window yet.
+        
 1998-10-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-icon-item.c: Add width_changed signal to icon-text-item.
